--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,19 @@ body{
 }
 
 .col {
-    display: inline-block;
-    height: 100px;
-    width: 100%;
+    height: 120px;
+    width: 120px;
+    padding: 2rem;
     background-color: var(--buzz-color);
+    margin: 2rem;
+}
+
+.list-item-Fizz{
+    background-color: var(--fizz-color);
+}
+.list-item-Buzz{
+    background-color: var(--buzz-color);
+}
+.list-item-BuzzFizz{
+    background-color: var(--fizzbuzz-color);
 }
