--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,12 +9,18 @@
 body{
     background-color: var(--background-color);
 }
-
+.container{
+    height: fit-content;
+}
+.row{
+    height: 120px;
+    width: 100%;
+}
 .col {
     height: 120px;
     width: 120px;
     padding: 2rem;
-    background-color: var(--buzz-color);
+    background-color: var(--number-color);
     margin: 2rem;
 }
 
@@ -26,4 +32,7 @@ body{
 }
 .list-item-BuzzFizz{
     background-color: var(--fizzbuzz-color);
+}
+.list-item{
+    background-color: var(--number-color);
 }
